[gd_scene load_steps=17 format=3 uid="uid://g2ss7brh7qlq"]

[ext_resource type="Texture2D" uid="uid://bmbspic5t3ygs" path="res://Archivos/Interfaz_Usuario/Recogibles/Obolo/Obolo_Sprite_Sheet.png" id="1_f0str"]
[ext_resource type="Script" path="res://Archivos/Interfaz_Usuario/Recogibles/Obolo/Obolo.gd" id="2_6km4n"]
[ext_resource type="Texture2D" uid="uid://dpu26o0xd2prk" path="res://Archivos/Interfaz_Usuario/Recogibles/Obolo/Sombra_Obolo_Sprite_Sheet.png" id="3_la5pe"]
[ext_resource type="PackedScene" uid="uid://bjf855h26o70t" path="res://Archivos/Generales/Cajas_Colision/Zona_Detectar.tscn" id="4_114le"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ix04n"]
atlas = ExtResource("1_f0str")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_i233p"]
atlas = ExtResource("1_f0str")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvh1i"]
atlas = ExtResource("1_f0str")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybjuc"]
atlas = ExtResource("1_f0str")
region = Rect2(27, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_etru5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix04n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i233p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvh1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybjuc")
}],
"loop": true,
"name": &"Animacion",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qd43i"]
atlas = ExtResource("3_la5pe")
region = Rect2(0, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulpmd"]
atlas = ExtResource("3_la5pe")
region = Rect2(9, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_eca4d"]
atlas = ExtResource("3_la5pe")
region = Rect2(18, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0sbr"]
atlas = ExtResource("3_la5pe")
region = Rect2(9, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_n8riu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd43i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulpmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eca4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0sbr")
}],
"loop": true,
"name": &"Animation",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d1y6q"]
radius = 3.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sx7uo"]
radius = 50.0

[node name="Obolo" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("2_6km4n")

[node name="Obolo" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_etru5")
animation = &"Animacion"
autoplay = "Animacion"

[node name="Sombra" type="AnimatedSprite2D" parent="."]
z_index = -1
y_sort_enabled = true
position = Vector2(0, 4.24743)
sprite_frames = SubResource("SpriteFrames_n8riu")
animation = &"Animation"
frame = 3
frame_progress = 0.897436

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-0.15625, 0.53125)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_d1y6q")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Tiempo_Vida" type="Timer" parent="."]
wait_time = 10.0

[node name="Zona_Detectar" parent="." instance=ExtResource("4_114le")]
collision_mask = 2

[node name="CollisionShape2D" parent="Zona_Detectar" index="0"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_sx7uo")
debug_color = Color(0, 0, 0, 0.243137)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Tiempo_Vida" to="." method="_on_tiempo_vida_timeout"]

[editable path="Zona_Detectar"]
